src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Education_Identification_System__c</fullName>
        <description>The system providing the identification for the school</description>
        <label>Education Identification System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elementary_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked signifies this school handles elementary school grade levels.</description>
        <label>Elementary School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check, signifies that this school organization handles high school grades. A school can belong to more than one of these categories such as 6th through 12th grads would be High School AND Middle School</description>
        <label>High School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Education_Agency_Id__c</fullName>
        <description>The identifier assigned to a local education agency by the State Education Agency (SEA). EdFi Req.</description>
        <label>Local Education Agency Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked signifies this school handles middle school grade levels.</description>
        <label>Middle School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>The main language spoken at this household</description>
        <label>Preferred Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preschool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, signifies that this school serves the early childhood education sector</description>
        <label>Preschool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>used for cohort groups, the scope to which this group applies. (District level, school leve, state level, etc)</description>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>Short Name for a school (e.g. Bedford Senior High School, could be BHS) -- EdFi req.</description>
        <label>Short Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Organization_Id__c</fullName>
        <description>The unique identifier assigned to the school by the state agency.</description>
        <label>State Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>